--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "eslint": "^4.16.0",
-    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-config-standard": "^11.0.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-mocha": "^5.0.0",
     "eslint-plugin-node": "^5.2.1",
@@ -38,6 +38,7 @@
   "dependencies": {
     "canonical-json": "0.0.4",
     "debug": "^3.1.0",
+    "fs-extra": "^6.0.1",
     "jsen": "^0.6.6",
     "thirty-two": "^1.0.2"
   },
