--- a/schemas/CodiusManifestSpec.json
+++ b/schemas/CodiusManifestSpec.json
@@ -61,6 +61,9 @@
               },
               "value": {
                 "type": "string"
+              },
+              "description": {
+                "type": "string"
               }
             },
             "required": [ "value" ],
