--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "sinon": "^5.0.10"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "canonical-json": "0.0.4",
     "debug": "^3.1.0",
+    "docker-parse-image": "^3.0.1",
     "fs-extra": "^6.0.1",
     "jsen": "^0.6.6",
     "thirty-two": "^1.0.2"
